--- a/src/app/asset/asset-test/asset-test.component.html
+++ b/src/app/asset/asset-test/asset-test.component.html
@@ -2,7 +2,7 @@
 <div>
     <div class="card-header">
     <h4>
-      Asset Calibration List&nbsp;<span class="badge badge-primary">{{ rows.length }}</span>
+      Asset Table&nbsp;<span class="badge badge-primary">{{ rows.length }}</span>
       <button  style=" padding:8px;margin:15px auto;width:10%;" [disabled]="!disabledDelButton" class="float-sm-right btn btn-danger btn-sm" (click)="deleteRow()"><b>Delete Row &nbsp;&nbsp;</b><i class="fa fa-trash-can"></i></button>
       <button style=" padding:8px;margin:15px 10px;width:10%;" (click)="test()" class="float-sm-right btn btn-green btn-sm" ><b>Add Asset&nbsp;&nbsp;</b><i class="fa fa-circle-plus"></i></button>
       
