--- a/src/app/dashboard/audit-datatable/audit-datatable.component.html
+++ b/src/app/dashboard/audit-datatable/audit-datatable.component.html
@@ -41,7 +41,6 @@
       
     </form>
   </div> 
-  
   </div>
   <div>
     
@@ -55,6 +54,7 @@
         [headerHeight]="50"
         [footerHeight]="50"
         rowHeight="auto"
+        [limit]="10"
         [reorderable]="reorderable"
       >
         <ngx-datatable-column name="User Id" prop="user_id">
@@ -73,11 +73,6 @@
         </ngx-datatable-column>
         
 
-        
-         
       </ngx-datatable>
-  
-     
-     
     </div> 
     </div> <br><br>
