--- a/src/app/dashboard/card/card.component.html
+++ b/src/app/dashboard/card/card.component.html
@@ -3,7 +3,7 @@
 <div class="row justify-content-center">
 
     <div class="col-sm-4">
-    <div class="card bg-light" style="width: 25rem;">
+    <div class="card bg-light" style="width: 25rem;display: flex;">
       <div class="card-body">
         <h5 class="card-title">Faulty/Missing Asset<span class="badge bg-info" style="margin-left:4em">{{missing}}</span></h5>
         <p class="card-text">From Master list</p>
@@ -14,7 +14,7 @@
     </div>
     
     <div class="col-sm-4">
-    <div class="card bg-light" style="width: 25rem;">
+    <div class="card bg-light" style="width: 25rem; display: flex;">
         <div class="card-body">
           <h5 class="card-title">Total Assets<span class="badge bg-info">{{assetData.length}}</span></h5>
           <p class="card-text">From Asset list </p>
@@ -24,7 +24,7 @@
     </div>
 
     <div class="col-sm-4">
-        <div class="card bg-light" style="width: 25rem;">
+        <div class="card bg-light" style="width: 25rem; display: flex;">
             <div class="card-body">
               <h5 class="card-title">Total Entry<span class="badge bg-info">{{masterData.length}}</span></h5>
               <p class="card-text">From Master list</p>
