--- a/src/app/asset/add-calib-modal/add-calib-modal.component.html
+++ b/src/app/asset/add-calib-modal/add-calib-modal.component.html
@@ -10,14 +10,15 @@
 
       <div class="form-group row">
         <label for="staticEmail" class="col-sm col-form-label">Asset Number: </label>
-        <div class="col-sm">
+        <div class="col-sm-10">
           <input type="text" readonly class="form-control-plaintext" [class.is-valid] id="staticEmail" disabled formControlName="Asset_no" >
         </div>
       </div>
 
+
       <div class="form-group row">
         <label for="staticEmail" class="col-sm col-form-label">Asset Description: </label>
-        <div class="col-sm">
+        <div class="col-sm-10">
           <input type="text" readonly class="form-control-plaintext" [class.is-valid] id="staticEmail" disabled formControlName="Asset_desc" >
         </div>
       </div>
